// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test AutoFocus should render correctly when height is less than 0 1`] = `
<div>
  <div
    class="panel switch"
  >
    <label
      class="title"
      for="auto-focus"
    >
      focus_adjustment
    </label>
    <button
      aria-checked="false"
      class="ant-switch ant-switch-small switch css-dev-only-do-not-override-hash"
      id="auto-focus"
      role="switch"
      type="button"
    >
      <div
        class="ant-switch-handle"
      />
      <span
        class="ant-switch-inner"
      >
        <span
          class="ant-switch-inner-checked"
        />
        <span
          class="ant-switch-inner-unchecked"
        />
      </span>
    </button>
  </div>
</div>
`;

exports[`test AutoFocus should render correctly when repeat is larger than 1 1`] = `
<div>
  <div
    class="panel switch"
  >
    <label
      class="title"
      for="auto-focus"
    >
      focus_adjustment
    </label>
    <button
      aria-checked="true"
      class="ant-switch ant-switch-small switch css-dev-only-do-not-override-hash ant-switch-checked"
      id="auto-focus"
      role="switch"
      type="button"
    >
      <div
        class="ant-switch-handle"
      />
      <span
        class="ant-switch-inner"
      >
        <span
          class="ant-switch-inner-checked"
        />
        <span
          class="ant-switch-inner-unchecked"
        />
      </span>
    </button>
  </div>
  <div
    class="panel without-drag"
  >
    <span
      class="title"
    >
      height
    </span>
    <div>
      MockUnitInput
      <p>
        id: 
        height
      </p>
      <p>
        min: 
        0.01
      </p>
      <p>
        max: 
        20
      </p>
      <p>
        unit: 
        mm
      </p>
      <p>
        defaultValue: 
        3
      </p>
      <p>
        decimal: 
      </p>
      <p>
        displayMultiValue: 
      </p>
      <button
        type="button"
      >
        change-
        height
      </button>
    </div>
  </div>
  <div
    class="panel without-drag"
  >
    <span
      class="title"
    >
      z_step
    </span>
    <div>
      MockUnitInput
      <p>
        id: 
        z_step
      </p>
      <p>
        min: 
        0
      </p>
      <p>
        max: 
        20
      </p>
      <p>
        unit: 
        mm
      </p>
      <p>
        defaultValue: 
        0
      </p>
      <p>
        decimal: 
      </p>
      <p>
        displayMultiValue: 
      </p>
      <button
        type="button"
      >
        change-
        z_step
      </button>
    </div>
  </div>
</div>
`;

exports[`test AutoFocus should render correctly when repeat is less than 1 1`] = `
<div>
  <div
    class="panel switch"
  >
    <label
      class="title"
      for="auto-focus"
    >
      focus_adjustment
    </label>
    <button
      aria-checked="true"
      class="ant-switch ant-switch-small switch css-dev-only-do-not-override-hash ant-switch-checked"
      id="auto-focus"
      role="switch"
      type="button"
    >
      <div
        class="ant-switch-handle"
      />
      <span
        class="ant-switch-inner"
      >
        <span
          class="ant-switch-inner-checked"
        />
        <span
          class="ant-switch-inner-unchecked"
        />
      </span>
    </button>
  </div>
  <div
    class="panel without-drag"
  >
    <span
      class="title"
    >
      height
    </span>
    <div>
      MockUnitInput
      <p>
        id: 
        height
      </p>
      <p>
        min: 
        0.01
      </p>
      <p>
        max: 
        20
      </p>
      <p>
        unit: 
        mm
      </p>
      <p>
        defaultValue: 
        3
      </p>
      <p>
        decimal: 
      </p>
      <p>
        displayMultiValue: 
      </p>
      <button
        type="button"
      >
        change-
        height
      </button>
    </div>
  </div>
</div>
`;
